trybuild-qcell/src/compiletest/qcell-16.stderr
error[E0502]: cannot borrow `cell` as mutable because it is also borrowed as immutable
  --> src/compiletest/qcell-16.rs:9:6
   |
8  |     let cell_ref = owner.ro(&cell);
   |                             ----- immutable borrow occurs here
9  |     *cell.get_mut() = 50; // Compile fail
   |      ^^^^^^^^^^^^^^ mutable borrow occurs here
10 |     assert_eq!(100, *cell_ref);
   |     -------------------------- immutable borrow later used here
